		* Various Updates in debian/ see debian/changelog
		* Added crash handling in command-line tools

	Wuischke:
		* Simplify browser selection
		* Use DoIconize() for dclick on tray icon, too
		* Fix minimizing from tray icon
		* Add option to show chat messages in log
		* Add option to specify amuleweb binary location
		* Add checks to cas to prevent segfaults

	Special Thanks To:
		* Greek for his contributions to aMule's user interface.

--------------------------------------------------------------------------------

Version 2.2.2 - The "Similarity." version.
----------
2008-08-08

	bomj:
		* Patch for alcc to improve usability

	Gaznevada:
		* implement getopt_long in cas for systems which lack it

	GonoszTopi:
		* Fixing denoiser
		* include <sys/types.h> before <regex.h> as by POSIX
		* Fix noinline in crypto for some systems
		* Fix display of ccache option
		* Add sources from search results for new downloads
		* Use output of gdlib-config for gd.h detection
		* Solaris mntent fix
		* wxMSW fix
		* Fix NULL pointer dereference
		* Fix for configure not using --with-geoip value in library check
		* Added pkg.m4 from pkg-config-0.23
		* Ported Kademlia Protocol Version 8 from eMule0.49b.
			- Kad now ignores multiple IDs pointing to one IP in
			  routing request answers
			- When calculating the total user count, Kad now uses
			  (if available) the real number of firewalled clients
			  for the calculation instead a fixed value. This will
			  take more effect when 0.49+ nodes become common
			- Kad no longer tries to add UDP firewalled (and therefore
			  mostly unreachable) nodes into its routing table,
			  reducing overhead and increasing reliability [Idea: Netfinity]
			- Optimized the Kad packettracking code to only track
			  packets which we check later, to save resources
			- Fixed a bug which let Kad sometimes assume a Kad2
			  contact to be Kad1 after probing for both versions
			- Did first small step in dropping Kad1 support by not